# yantarantana

./: .gitignore  .gitmodules  CMakeLists.txt  cmake.bat  yantarantana.cpp
document/: CMakeLists.txt  Document.cpp  Document.h  DocumentElement.h  DocumentElementContainer.h  DocumentSignals.h  DocumentTreeRoiVisitor.cpp  DocumentTreeRoiVisitor.h  DocumentTreeTransformationVisitor.cpp  DocumentTreeTransformationVisitor.h  DocumentTreeVisitor.cpp  DocumentTreeVisitor.h  Page.cpp  Page.h  Path.h  Precision.h  Selection.cpp  Selection.h  Stroke.h  StrokePoint.h  StrokePoints.h  Style.h  Transformable.h  Transformation.h
gui/: CMakeLists.txt  DocumentView.cpp  DocumentView.h  Quality.h  Rasterizer.h  SkiaDocumentPainter.cpp  SkiaDocumentPainter.h  SkiaDocumentVisitor.cpp  SkiaDocumentVisitor.h  SkiaStrokeBallPainter.cpp  SkiaStrokeBallPainter.h  SkiaStrokeLinePainter.cpp  SkiaStrokeLinePainter.h  SkiaStrokePathEffectPainter.cpp  SkiaStrokePathEffectPainter.h  TexturePyramid.cpp  TexturePyramid.h  TilesCache.cpp  TilesCache.h  TorusTexture.cpp  TorusTexture.h
modules/: CMakeLists.txt
